fix(bainistigh): center the WYSIWYG editor when sidebar is collapsed

--- a/apps/bainistigh/assets/css/components/wiki/_editor.scss
+++ b/apps/bainistigh/assets/css/components/wiki/_editor.scss
@@ -43,7 +43,7 @@
   }
 }
 
-section.wiki:has(.sidebar_toggle:not(:checked)) .editor {
+section.wiki:has(.SidebarComponent > .toggle:not(:checked)) .editor {
   @include media.ipad(min) {
     margin-inline-end: 0;
   }
